deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: containerofcats-deployment 
  labels:
    app: containerofcats 
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: containerofcats
  template:
    metadata:
      labels:
        app: containerofcats
    spec:  
      containers:
      - name: containerofcats
        image: miihirsawant/containerofcats:latest  
        ports:
        - containerPort: 80
