service.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerofcats
  labels:
    app: containerofcats
spec:
  ports:
  - port: 80
    name: containerofcats
    targetPort: 80
  type: ClusterIP
  selector:
    app: containerofcats
